add options to generate nucleon configurations for light nuclei(d and 3He)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable (superMC.e
   RandomVariable.cpp
   TableFunction.cpp 
   Table.cpp
+  HulthenFunc.cpp
   )
 target_link_libraries (superMC.e ${LIBS})
 
