--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable (superMC.e
   GlueDensity.cpp 
   MakeDensity.cpp
   KLNModel.cpp 
-  OverLap.cpp 
+  Nucleus.cpp 
   Largex.cpp 
   Regge96.cpp 
   rcBKfunc.cpp
@@ -21,7 +21,6 @@ add_executable (superMC.e
   HulthenFunc.cpp
   GaussianDistribution.cpp
   Particle.cpp
-  Participant.cpp
   )
 target_link_libraries (superMC.e ${LIBS})
 
