Improved accuracy of fluctuated collision detection. Improved dumpEccentricities output rate. No longer integrates over the entire grid, but only the useful regions (previously was bugged and double counted some regions). Added relative quark positions as a children of particles. Need to add functionality for rotating the grid of particles. Currently, the quark positions do not rotate.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable (superMC.e
   GaussianDistribution.cpp
   Particle.cpp
   Box2D.cpp
+  Quark.cpp
   )
 target_link_libraries (superMC.e ${LIBS})
 
